--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "mocha server/**/*.test.js",
+    "test-watch": "nodemon --exec \"npm run test\" "
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +15,11 @@
     "express": "^4.16.2",
     "mongodb": "^3.0.2",
     "mongoose": "^5.0.6"
+  },
+  "devDependencies": {
+    "expect": "^22.3.0",
+    "mocha": "^5.0.1",
+    "nodemon": "^1.15.0",
+    "supertest": "^3.0.0"
   }
 }
